--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "18.2.0",
     "react-collapsed": "^3.3.2",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
     "swiper": "^8.3.1"
   },
