--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
-    "swiper": "^8.3.1"
+    "swiper": "^8.3.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
