--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "12.2.2",
     "react": "18.2.0",
     "react-collapsed": "^3.3.2",
+    "react-collapsible": "^2.10.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
